#745 Remove tab stretch to fix the material dialog resize issue

--- a/wowup-electron/src/app/components/addon-detail/addon-detail.component.scss
+++ b/wowup-electron/src/app/components/addon-detail/addon-detail.component.scss
@@ -32,6 +32,8 @@
   }
 }
 .addon-detail-view {
+  min-width: 600px;
+
   .icon-link {
     width: 24px;
     height: 24px;
